Kamilimu Month 2 Presentation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KAMILIMU PRESENTATION</title>
-    <link rel="stylesheet" href="Kamilimu_Month2/cat.css"
+    <link rel="stylesheet" href="Kamilimu_month2/cat.css"
 </head>
 <body>
     
